# databricks-mcp-server

./: .env.example  .gitignore  AGENT_IMPLEMENTATION.md  ARCHITECTURE.md  CHAT_AGENT.md  CHAT_AGENT_QUICKSTART.md  COMPLETION_SUMMARY.md  DATABRICKS_APPS_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOY_VIA_GIT.sh  FINAL_SUMMARY.md  LOCAL_TEST_RESULTS.md  OLLAMA_SETUP.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_SHARE.md  README.md  README_DETAILED.md  SHARING_GUIDE.md  app.py  app.yaml  app_chat_agent.yaml  app_mcp_server.yaml  auth.py  chat_agent.py  chat_agent_databricks.py  chat_agent_ollama.py  databricks.yml  databricks_client.py  demo_chat.sh  deploy.sh  deploy_apps.sh  deploy_correct.sh  deploy_to_databricks.sh  local_mcp_server.py  prepare_for_sharing.sh  pyproject.toml  quick_test.py  requirements.txt  (+9 more)
notebooks/: databricks_agent.py  debug_mcp_response.py  simple_test.py  test_mcp_http.py  test_mcp_server.py
oauth/: cursor_oauth_proxy.py  cursor_proxy.py  programmatic_oauth_client.py
tests/: test_deployed_now.py
tools/: __init__.py  clusters.py  jobs.py  notebooks.py  repos.py  secrets.py  sql.py  unity_catalog.py  workspace.py
transports/: __init__.py  base.py  websocket.py
